--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ html, body{
     background-repeat: no-repeat;
 }
 .card-27{
-    background: url('./assets/mihir.jpg');
+    background: url('./assets/Mihir.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -358,10 +358,10 @@ html, body{
     background: url('./assets/20200810_222805 - Tamanjit Singh.jpg');
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repteat: no-repeat;
 }
 .card-56{
-    background: url('./assets/IMG_8639 - Tanmay Khandelwal.jpg');
+    background: url('./assets/IMG_8639 - Tanmay Khandelwal.JPG');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
