--- a/styles.css
+++ b/styles.css
@@ -498,23 +498,23 @@ html {
 } */
 
 canvas {
-  width: 100%;
-  height: 100vh;
-  position: fixed;
-  z-index: -2;
-  top: 0;
-  left: 0;
-}
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: -3;
+    top: 0;
+    left: 0;
+  }
 
-.landscape {
-  z-index: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: -1;
-}
+  .landscape {
+    z-index: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -2;
+  }
 .landscape .landscapeItem {
   position: absolute;
   z-index: 0;
@@ -728,3 +728,11 @@ canvas {
 .landscape .landscapeItem.topographic.animateOut {
   opacity: 0;
 }
+
+.custom-overlay{
+    background: rgba(20, 20, 20, 0.6);
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: -1;
+  }
