--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ html, body{
     background-repeat: no-repeat;
 }
 .card-40{
-    background: url('./assets/WhatsApp Image 2020-08-15 at 12.46.48 AM.jpeg');
+    background: url('./assets/rishabJain.jpeg');
     /* background-position: center; */
     background-size: cover;
     background-repeat: no-repeat;
