optimisied for performance

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ html, body{
     background-repeat: no-repeat;
 }
 .card-19{
-    background: url('./assets/Harshita - Chiya Bansal.jpg');
+    background: url('./assets/Harshita\ -\ Chiya\ Bansal.jpeg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
